# pytube

./: .bumpversion.cfg  .gitignore  404.html  LICENSE  README.md  SECURITY.md  config.yaml  index.html  mkdocs.yml  pixi.toml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: emails.md  index.md  installation.md  linkedin.md  openai.md  processing.md  scripts.md  youtube.md
docs/stylesheets/: extra.css
emails/: index.html
installation/: index.html
license/: index.html
linkedin/: index.html
openai/: index.html
processing/: index.html
pytube/: __init__.py  job.py  linkedin_company_post.py  nlpservice.py  records.py  tmp.py  usr.py  video_organizer.py  video_process_google_sheet.py  video_vimeo.py  youtube_videos.py
pytube/handlers/: __init__.py  linkedin.py  nlpservice.py  publisher.py  records.py  youtube.py
pytube/models/: sessions.py  talk.py  video.py
pytube/scripts/: notify.py  records.py  video_organizer.py  video_process_google_sheet.py  youtube.py
pytube/usr/: add_logo_to_social_cards.py
pytube/z-old-archive/: linked_in_get_person_urn.py
scripts/: hook_add_logo_to_social_cards.py  hook_copyright_year.py  index.html
search/: search_index.json
src/: __init__.py  info_from_pretalx.py  job.py  linked_in_get_person_urn.py  linkedin_company_post.py  nlpservice.py  read_videos.py  records.py  usr.py  video_organizer.py  video_process_google_sheet.py  video_vimeo.py  vimeo_worker.py  youtube-boilerplate.py  youtube_videos.py
src/models/: talk.py  video_metadata.py
src/templates/: youtube_2024.txt
src/z-old-archive/: linked_in_get_person_urn.py  youtube-boilerplate.py
tests/: test_job.py  test_youtube_videos.py
youtube/: index.html
