[project]
name = "Vimeo to YouTube"
version = "0.9.2"
description = "Download videos from Vimeo to publish on YouTube, add metadata from pretalx."
authors = [
    { name = "Alexander CS Hendorf", email = "hendorf@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/PioneersHub/vimeo2youtube"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".md"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PL",  # pylint
    "TID",  # tidy
    "I",  # isort
    "N",  # pep8-naming
    "UP"  # pyupgrade
]
ignore = [
    "E501",  # may cause conflicts with ruff formatter
    "W191"
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true